syntax = "proto3";

package domain;

import "domain/common.proto";

option java_package = "br.com.fabricads.poc.proto";

message DataPointRequest {
    string username = 1;
    Status status = 2;
}

message StatusCounters {
  int64 success = 1;
  int64 errors = 2;
}

message ErrorsView {
  repeated string users = 1;
}

message ReportState {
  StatusCounters counters = 1;
  ErrorsView users_with_errors = 2;
}